refactor: Coupon Money 값 객체 적용